Use standard zio config mechanism and integrate zio-lmdb although not yet used